[package]
name = "db-scripts"
author = "Sourav Agrawal"
version = "0.1.0"
edition = "2021"
about = "Generate a kml for a list of images with GPS information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.26.0"
log = "0.4.17"
env_logger = { version = "0.10.0", features = ["auto-color", "color", "humantime", "regex"] }
clap = { version = "4.0.26", features = ["derive"] }
kamadak-exif = "0.5.5"
simplelog = "0.12.0"
time = "0.3.17"
