[package]
name = "generate-kml-for-images"
authors = ["Sourav Agrawal"]
version = "0.1.0"
edition = "2021"
about = "Generate a kml for a list of images with GPS information"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities","kml","exif"]

[dependencies]
quick-xml = "0.26.0"
log = "0.4.17"
clap = { version = "4.0.26", features = ["derive"] }
kamadak-exif = "0.5.5"
simplelog = "0.12.0"
time = "0.3.17"
