[package]
name = "generate-kml-for-images"
authors = ["Sourav Agrawal <agrawalsourav98@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "Generate a kml for a list of images with GPS information"
repository = "https://github.com/agrawalsourav98/generate-kml-from-images-rs.git"
readme = "README.md"
license-file = "LICENSE"
keywords = ["kml","exif"]
categories = ["command-line-utilities"]

[dependencies]
quick-xml = "0.26.0"
log = "0.4.17"
clap = { version = "4.0.26", features = ["derive"] }
kamadak-exif = "0.5.5"
simplelog = "0.12.0"
time = "0.3.17"
